# noteshift

./: .coverage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-contract.md  cli.md  concepts.md  filenames-and-links.md  getting-started.md  index.md  migration-report.md  troubleshooting.md
docs/spec/: customer_pain_map.md  fragment256_transfer_plan.md  licensing_paywall.md  release_checklist.md  versioning_policy.md
src/noteshift/: __init__.py  api.py  checkpoint.py  cli.py  db_export.py  events.py  exporter.py  filenames.py  license.py  markdown.py  notion.py  types.py
test-export/: .checkpoint.json  migration_report.json  migration_report.md
test-export/NoteShift-Test-Export/: index.md
test-export/NoteShift-Test-Export/Child-1/: index.md
tests/: conftest.py  generate_notion_test_data.py
tests/contract/: test_notion_contract.py  test_notion_contract_query.py
tests/contract/cassettes/: test_get_page_contract_replay.yaml  test_query_data_source_contract_replay.yaml
tests/integration/: test_export_smoke.py
tests/unit/: test_api.py  test_checkpoint.py  test_cli.py  test_db_export.py  test_exporter.py  test_filenames.py  test_license.py  test_markdown.py  test_notion.py
