[authors]
    name = "Luke"
    email = "lukemaxwellshouse@gmail.com"

[project]
name = "noteshift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-slugify>=8.0.4",
    "typer>=0.24.1",
]

[project.scripts]

[tool.ruff]
lint = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "B008",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=3.0.0", # Adding pytest-cov
]
dev = [
    "ruff>=0.15.4",
]
