[project]
name = "noteshift"
version = "0.1.0"
description = "Export Notion pages and databases to Obsidian-friendly Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Fragment256" }
]
keywords = ["notion", "obsidian", "migration", "markdown", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.28.1,<0.29",
    "python-slugify>=8.0.4,<9",
    "typer>=0.24.1,<1",
]

[project.urls]
Homepage = "https://github.com/Fragment256/noteshift"
Repository = "https://github.com/Fragment256/noteshift"
Issues = "https://github.com/Fragment256/noteshift/issues"

[project.scripts]
noteshift = "noteshift.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.1,<2",
    "pytest>=9.0.2,<10",
    "pytest-cov>=6.0.0,<7",
    "pytest-vcr>=1.0.2,<2",
    "ruff>=0.15.4,<0.16",
]
test = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=6.0.0,<7",
    "pytest-vcr>=1.0.2,<2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "contract: deterministic API contract tests (vcr-backed)",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
mypy_path = "src"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
